Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <!-- Página Inicial -->
   <div class="container" id="home">
     <a class="menu-btn" href="#lis">
-      <img src="/IMG/lis_logo.png" alt="Logo LIS">
+      <img src="./IMG/lis_logo.png" alt="Logo LIS">
     </a>
 
     <a class="menu-btn" href="#face">
-      <img src="/IMG/face_logo.png" alt="Logo FACE">
+      <img src="./IMG/face_logo.png" alt="Logo FACE">
     </a>
 
     <a class="menu-btn" href="#sus">
-      <img src="/IMG/sustentabilidade_logo.png" alt="Logo Sustentabilidade">
+      <img src="./IMG/sustentabilidade_logo.png" alt="Logo Sustentabilidade">
     </a>
   </div>
 
@@ -33,7 +33,7 @@
   <div class="container" id="lis" style="display:none;">
     <a class="back-btn" href="#home">← Voltar</a>
     <div class="card">
-      <img src="/IMG/lis_logo.png" alt="Capa" />
+      <img src="./IMG/lis_logo.png" alt="Capa" />
       <h2>Título do Depoimento</h2>
       <p>Descrição breve do depoimento.</p>
       <audio controls>
@@ -46,7 +46,7 @@
   <div class="container" id="face" style="display:none;">
     <a class="back-btn" href="#home">← Voltar</a>
     <div class="card">
-      <img src="/IMG/face_logo.png" alt="Capa" />
+      <img src="./IMG/face_logo.png" alt="Capa" />
       <h2>Título FACE</h2>
       <p>Descrição do depoimento FACE.</p>
       <audio controls>
@@ -59,7 +59,7 @@
   <div class="container" id="sus" style="display:none;">
     <a class="back-btn" href="#home">← Voltar</a>
     <div class="card">
-      <img src="/IMG/sustentabilidade_logo.png" alt="Capa" />
+      <img src="./IMG/sustentabilidade_logo.png" alt="Capa" />
       <h2>Depoimento Sustentabilidade</h2>
       <p>Descrição do depoimento para área de sustentabilidade.</p>
       <audio controls>
@@ -83,3 +83,4 @@
   </script>
 </body>
 </html>
+
