upload do audio

--- a/index.html
+++ b/index.html
@@ -46,14 +46,25 @@
   <div class="container" id="face" style="display:none;">
     <a class="back-btn" href="#home">← Voltar</a>
     <div class="card">
-      <img src="./IMG/face_logo.png" alt="Capa" />
-      <h2>Título FACE</h2>
-      <p>Descrição do depoimento FACE.</p>
+      <img src="./IMG/Taiana.png" alt="Capa" />
+      <h2>Depoimento da Taiana</h2>
+      <p>A Profª Taiana compartilha sua experiência com os projetos realizados junto ao FACE.</p>
       <audio controls>
-        <source src="audio2.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Depoimento_Taiana.m4a" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/face_logo.png" alt="Capa" />
+      <h2>Depoimento FACE</h2>
+      <p>Descrição do depoimento para área do FACE.</p>
+      <audio controls>
+        <source src="./Sounds/Depoimento_Taiana.m4a" type="audio/mpeg" />
       </audio>
     </div>
   </div>
+  
 
   <!-- Sustentabilidade -->
   <div class="container" id="sus" style="display:none;">
