--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
     <br>
     <br>
     <div class="card">
+      <img src="./IMG/Henrique_Romão.jfif" alt="Capa" />
+      <h2>Depoimento do Henrique Romão</h2>
+      <p>Descrição do depoimento para área do FACE.</p>
+      <audio controls>
+        <source src="./Sounds/Depoimento_HenriqueSebrae.ogg" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/Giovanni.png" alt="Capa" />
+      <h2>Depoimento do Giovanni</h2>
+      <p>Descrição do depoimento para área do FACE.</p>
+      <audio controls>
+        <source src="./Sounds/Depoimento_Giovanni.m4a" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
       <img src="./IMG/face_logo.png" alt="Capa" />
       <h2>Depoimento FACE</h2>
       <p>Descrição do depoimento para área do FACE.</p>
