--- a/index.html
+++ b/index.html
@@ -40,6 +40,126 @@
         <source src="audio1.mp3" type="audio/mpeg" />
       </audio>
     </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/lis_logo.png" alt="Capa" />
+      <h2>Título do Depoimento</h2>
+      <p>Descrição breve do depoimento.</p>
+      <audio controls>
+        <source src="audio1.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
   </div>
 
   <!-- FACE -->
@@ -50,7 +170,7 @@
       <h2>Taiana Vidotto</h2>
       <p>A Profª Taiana compartilha sua experiência com os projetos realizados junto ao FACE.</p>
       <audio controls>
-        <source src="./Sounds/Depoimento_Taiana.m4a" type="audio/mpeg" />
+        <source src="./Sounds/Depoimento_Taiana.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
@@ -70,7 +190,7 @@
       <h2>Giovanni Gomieri</h2>
       <p>O Giovanni Gomieri, do 4º semestre de Engenharia de Computação, conta como o programa de ideação do FACE, em parceria com a Wadhwani Foundation, impulsionou a evolução de sua edtech.</p>
       <audio controls>
-        <source src="./Sounds/Depoimento_Giovanni.m4a" type="audio/mpeg" />
+        <source src="./Sounds/Depoimento_giovanni.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
