--- a/index.html
+++ b/index.html
@@ -33,132 +33,101 @@
   <div class="container" id="lis" style="display:none;">
     <a class="back-btn" href="#home">← Voltar</a>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Smith.jpeg" alt="Capa" />
+      <h2>Smith</h2>
+      <p>Smith é um dos morador do Jardim Lappena, bairro que recebeu 50 casas emergências da ONG TETO. A casa construída pelos alunos da UniFacens foi feita com e para ele.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Áudio Smith Teto.ogg" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/Maria Clara.jpeg" alt="Capa" />
+      <h2>Maria Clara da Silva Nogueira</h2>
+      <p>Maria Clara é aluna do curso de Engenharia de Produção da UniFacens. Ela já foi voluntária da EcoGinc e desenvolveu uma solução para otimizar rotas das coletas de reciclagem da Coreso.</p>
+      <audio controls>
+        <source src="./Sounds/Maria Clara - Coreso.ogg" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/Renata.jpeg" alt="Capa" />
+      <h2>Renata Caramez</h2>
+      <p>Renata é professora do curso de Odontologia na Facens. Em 2024, ficou em 1º lugar no Prêmio Educador Sustentável com o projeto de aula intitulado “Tabagismo e sustentabilidade: impactos na saúde bucal e no meio ambiente”.</p>
+      <audio controls>
+        <source src="./Sounds/Professora Renata - PES.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
       <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <h2>Jéssica Silva</h2>
+      <p> O projeto "Nossa Horta, Nosso Futuro" é uma iniciativa do LIS em parceria com o curso de Engenharia Agronômica, voltada para a implantação de hortas em escolas e ONGs selecionadas. Com o envolvimento direto de alunos e professores, o projeto busca promover a educação ambiental, a alimentação saudável e a sustentabilidade dentro das instituições contempladas.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Áudio Jéssica - Nossa Horta Nosso Futuro.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Kevilyn.jpeg" alt="Capa" />
+      <h2>Kevelyn Vitoria do Carmo Azevedo</h2>
+      <p>A EcoGinc é uma iniciativa envolvente e inspiradora, projetada para estudantes do Ensino Médio da rede pública, tendo como objetivo promover a inspiração e incentivar os participantes a se tornarem agentes de transformação em questões cruciais, como sustentabilidade, cidadania, empreendedorismo e resolução de conflitos.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Kevilyn - EcoGinc.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Sthefany_EcoGinc.png" alt="Capa" />
+      <h2>Sthefany Porcari</h2>
+      <p>A EcoGinc é uma iniciativa envolvente e inspiradora, projetada para estudantes do Ensino Médio da rede pública, tendo como objetivo promover a inspiração e incentivar os participantes a se tornarem agentes de transformação em questões cruciais, como sustentabilidade, cidadania, empreendedorismo e resolução de conflitos.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Sthefany_EcoGinc.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Ana Beatriz.png" alt="Capa" />
+      <h2>Ana Beatriz Frazão Elias da Costa</h2>
+      <p>O Programa Decola Aí! é destinado a estudantes do ensino médio da rede pública, com idades entre 15 e 17 anos e tem por objetivo combater a evasão escolar, demonstrando a educação como ferramenta de transformação pessoal e comunitária.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Ana Beatriz - Decola Aí.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Profa. Vanda.png" alt="Capa" />
+      <h2>Vanda Maria Quecini</h2>
+      <p>O componente curricular Projetos de Urbanismo IV tem como objetivo proporcionar aos estudantes o desenvolvimento de propostas urbanas em contextos reais de vulnerabilidade socioespacial.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Profa. Vanda - Urbanismo Tático.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
+      <img src="./IMG/Isadora_Urbanismo.jpeg" alt="Capa" />
+      <h2>Isadora Santos da Costa</h2>
+      <p>O componente curricular Projetos de Urbanismo IV tem como objetivo proporcionar aos estudantes o desenvolvimento de propostas urbanas em contextos reais de vulnerabilidade socioespacial.</p>
       <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
+        <source src="./Sounds/Isadora_Arquitetura.ogg" type="audio/mpeg" />
       </audio>
     </div>
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
-    <br>
-    <br>
-    <div class="card">
-      <img src="./IMG/lis_logo.png" alt="Capa" />
-      <h2>Título do Depoimento</h2>
-      <p>Descrição breve do depoimento.</p>
-      <audio controls>
-        <source src="audio1.mp3" type="audio/mpeg" />
-      </audio>
+      <img src="./IMG/Acessibilidade_logo.png" alt="Capa" />
+      <h2>Carla</h2>
+      <p>Olá meu nome é Carla e faço parte do conselho de diversidade e inclusão do LIS onde tenho espaço de ouvir e dar a minhas opiniões em algumas questões importantes. Percebi que todos nós precisamos de ajuda e apoio. 
+Onde eu achava que somente eu tinha as minhas dificuldades, pude ver que existem outras pessoas com condições mais delicadas que a minha. Aprendi também a ouvir o que as outras pessoas tem pra falar. 
+Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser falada e que possamos transmitir nossas conversas com outras pessoas.</p>
     </div>
   </div>
 
