fix correção da imagem da Carla

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <br>
     <br>
     <div class="card">
-      <img src="./IMG/Acessibilidade_logo.png" alt="Capa" />
+      <img src="./IMG/Carla.jpeg" alt="Capa" />
       <h2>Carla</h2>
       <p>Olá meu nome é Carla e faço parte do conselho de diversidade e inclusão do LIS onde tenho espaço de ouvir e dar a minhas opiniões em algumas questões importantes. Percebi que todos nós precisamos de ajuda e apoio. 
 Onde eu achava que somente eu tinha as minhas dificuldades, pude ver que existem outras pessoas com condições mais delicadas que a minha. Aprendi também a ouvir o que as outras pessoas tem pra falar. 
