--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="acessibilidade.css" />
+  <script src="acessibilidade.js" defer></script>
   <title>Depoimentos</title>
 </head>
 <body>
   <header>
     <h1>EDUCAÇÃO INOVADORA PARA UM FUTURO SUSTENTÁVEL</h1>
   </header>
+  <div id="acessibilidade-menu" class="acessibilidade-menu">
+        <span>Acessibilidade</span>
+        <div>
+            <button id="diminuir-fonte" aria-label="Diminuir tamanho da fonte">
+                <span class="sr-only">Diminuir tamanho da fonte</span>
+                A-
+            </button>
+            <button id="normalizar-fonte" aria-label="Normalizar tamanho da fonte">
+                <span class="sr-only">Normalizar tamanho da fonte</span>
+                aA
+            </button>
+            <button id="aumentar-fonte" aria-label="Aumentar tamanho da fonte">
+                <span class="sr-only">Aumentar tamanho da fonte</span>
+                A+
+            </button>
+        </div>
+        <button id="contraste" aria-label="Ativar/desativar modo de alto contraste">
+            <img src="./ico/Contraste.svg" alt="Ativar e desativar modo de alto contraste">
+        </button>
+        <button id="vlibras-button" aria-label="Ativar VLibras">
+            <span class="sr-only">Ativar/desativar VLibras</span>
+            <img src="./ico/VLibras.svg" alt="Ativar e desativar VLibras">
+        </button>
+    </div>
   <div class="container">
      <h2>Como colaboramos na formação de cidadãos que podem transformar o mundo</h2>
   </div>
@@ -211,6 +237,16 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     }
     navigate();
   </script>
+  <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
 </body>
 </html>
 
