--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     </div>
   </div>
 
+  <footer>
+    <p>© 2025 Vitor Barbosa - Todos os direitos reservados.</p>
+  </footer>
   <script>
     // alternar entre "páginas" simples
     const sections = ["home", "lis", "face", "sus"];
