--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     <div class="card">
       <img src="./IMG/Taiana.png" alt="Capa" />
       <h2>Taiana Vidotto</h2>
-      <p>A Profª Taiana compartilha sua experiência com os projetos realizados junto ao FACE.</p>
+      <p>A Profª Taiana, docente dos cursos de Arquitetura da UniFacens, compartilha sua experiência com os projetos realizados junto ao FACE, como o componente curricular Praticas Profissionais e no projeto de Extenção: Thermalis.</p>
       <audio controls>
         <source src="./Sounds/Depoimento_Taiana.ogg" type="audio/mpeg" />
       </audio>
@@ -172,7 +172,7 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     <br>
     <div class="card">
       <img src="./IMG/Henrique_Romão.jfif" alt="Capa" />
-      <h2>Henrique Romão SEBRAE</h2>
+      <h2>Henrique Romão</h2>
       <p>O Henrique Romão, consultor de inovação e negócios do SEBRAE, compartilha um depoimento sobre as ações conjuntas e os resultados da parceria entre a Facens e o SEBRAE.</p>
       <audio controls>
         <source src="./Sounds/Depoimento_HenriqueSebrae.ogg" type="audio/mpeg" />
@@ -183,7 +183,7 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     <div class="card">
       <img src="./IMG/Giovanni.png" alt="Capa" />
       <h2>Giovanni Gomieri</h2>
-      <p>O Giovanni Gomieri, do 4º semestre de Engenharia de Computação, conta como o programa de ideação do FACE, em parceria com a Wadhwani Foundation, impulsionou a evolução de sua edtech.</p>
+      <p>O Giovanni Gomieri, aluno do 4º semestre de Engenharia de Computação, conta como o programa de ideação do FACE, em parceria com a Wadhwani Foundation, e do programa Start do Sebrae e como impulsionou a evolução de sua edtech.</p>
       <audio controls>
         <source src="./Sounds/Depoimento_giovanni.ogg" type="audio/mpeg" />
       </audio>
@@ -193,7 +193,7 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
     <div class="card">
       <img src="./IMG/Anna.jpeg" alt="Capa" />
       <h2>Ana Maria </h2>
-      <p>A Profª Ana Maria conta como foi participar do programa de mentorias em empreendedorismo com o projeto de Iniciação Científica que orienta.</p>
+      <p>A Profª Ana Maria, docente dos cursos da Escola de Saúde da UniFacens, conta como foi participar do programa de mentorias, do programa de ideação da WadhWani Fundation e também do programa Spark do Sebrae, com o projeto de Iniciação Científica que orienta.</p>
       <audio controls>
         <source src="./Sounds/Depoimento_Anna.ogg" type="audio/mpeg" />
       </audio>
