submissão de mais dois depoimentos

--- a/index.html
+++ b/index.html
@@ -208,6 +208,26 @@ Espero continuar com esse grupo no próximo ano, pois temos novas coisas pra ser
         <source src="./Sounds/Depoimento_Rodrigo.ogg" type="audio/mpeg" />
       </audio>
     </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/Thiago.jpg" alt="Capa" />
+      <h2>Thiago Silva</h2>
+      <p>Thiago Silva é um alumni da UniFacens e compartilha sua experiência no programa de ideação do FACE em parceria com a Wadhwani Foundation.</p>
+      <audio controls>
+        <source src="./Sounds/Thiago_Silva.ogg" type="audio/mpeg" />
+      </audio>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+      <img src="./IMG/Mel.jpg" alt="Capa" />
+      <h2>Mel Plens</h2>
+      <p>A Mel Plens é uma alumni de Analise e Desenvolvimento de Sistemas da UniFacens, e participou de varios programas para aprimorar e desenvolver sua ideia de negócio, o FalaShow.</p>
+      <audio controls>
+        <source src="./Sounds/Mel_Plens.ogg" type="audio/mpeg" />
+      </audio>
+    </div>
   </div>
   
 
